Fix alignment for some status

--- a/my/src/assets/css/status.css
+++ b/my/src/assets/css/status.css
@@ -40,6 +40,7 @@ p {
     font-size: 3vw;
     font-weight: 600;
     padding-left:5% !important;
+    margin-right: 25%;
     /* padding: 2% 0 0 5%;     */
 }
 .medium {
